--- a/pillar.example
+++ b/pillar.example
@@ -1,98 +1,12 @@
 # -*- coding: utf-8 -*-
 # vim: ft=yaml
 ---
-postgres:
-  version: 13
-  postgresconf: |-
-    listen_addresses = '*'  # or localhost,192.168.1.1'
-  users:
-    airflow:
-      ensure: present
-      password: airflow
-      createdb: true
-      inherit: true
-      createroles: true
-      replication: true
-  databases:
-    airflow:
-      owner: airflow
-  acls:
-      # scope, db, user, [ cidr ] ..
-    - ['local', 'airflow', 'airflow', 'md5']
-    - ['local', 'all', 'all', 'peer']
-    - ['host', 'all', 'all', '127.0.0.1/32', 'md5']
-    - ['host', 'all', 'all', '191.168.1.1/32', 'md5']
-    - ['host', 'all', 'all', '191.168.1.2/32', 'md5']
-    - ['host', 'all', 'all', '::1/128', 'md5']
-    - ['local', 'replication', 'all', 'peer']
-    - ['host', 'replication', 'all', '127.0.0.1/32', 'md5']
-    - ['host', 'replication', 'all', '::1/128', 'md5']
-
-rabbitmq:
-  cluster:
-    rabbit@locahost:
-      user: rabbit       # user is confusing keyname; should be 'node: rabbit'
-      host: primaryhost  # host of node to join to
-      ram_node: None
-      runas: rabbitmq
-      erlang_cookie:
-        name: /var/lib/rabbitmq/.erlang.cookie
-        value: shared-value-for-all-cluster-members
-  vhost:
-    - airflow
-  user:
-    airflow:
-      - password: 'airflow'
-      - force: true
-      - tags:
-        - management
-        - administrator
-      - perms:
-          - 'airflow':
-            - '.*'
-            - '.*'
-            - '.*'
-      - runas: rabbitmq
-  queue:
-    airflow:
-      - user: airflow
-      - passwd: airflow
-      - durable: true
-      - auto_delete: false
-      - vhost: airflow
-      - arguments:
-          - 'x-message-ttl': 8640000
-          - 'x-expires': 8640000
-          - 'x-dead-letter-exchange': 'airflow'
-  binding:
-    airflow:
-      - destination_type: queue
-      - destination: airflow
-      - routing_key: airflow_routing_key
-      - user: airflow
-      - passwd: password
-      - vhost: airflow
-      - arguments:
-          - 'x-message-ttl': 8640000
-  exchange:
-    airflow:
-      - user: airflow
-      - passwd: airflow
-      - type: fanout
-      - durable: true
-      - internal: false
-      - auto_delete: false
-      - vhost: airflow
-      - arguments:
-          - 'alternate-**exchange': 'amq.fanout'
-          - 'test-header': 'testing'
-  policy: {}
-  upstream: {}
+# This file includes rabbitmq and postgres pillar data examples
 
 airflow:
   identity:
     airflow:
-      role: primary
+      role: scheduler   # only for host running scheduler
       user: airflow
       group: airflow
       skip_user_state: true  # _airflow already exists
@@ -206,4 +120,92 @@ airflow:
         - microsoft.winrm   # WinRM hooks and operators
   linux:
     altpriority: 0   # zero disables alternatives
+
+postgres:
+  version: 13
+  postgresconf: |-
+    listen_addresses = '*'  # or localhost,192.168.1.1'
+  users:
+    airflow:
+      ensure: present
+      password: airflow
+      createdb: true
+      inherit: true
+      createroles: true
+      replication: true
+  databases:
+    airflow:
+      owner: airflow
+  acls:
+      # scope, db, user, [ cidr ] ..
+    - ['local', 'airflow', 'airflow', 'md5']
+    - ['local', 'all', 'all', 'peer']
+    - ['host', 'all', 'all', '127.0.0.1/32', 'md5']
+    - ['host', 'all', 'all', '191.168.1.1/32', 'md5']
+    - ['host', 'all', 'all', '191.168.1.2/32', 'md5']
+    - ['host', 'all', 'all', '::1/128', 'md5']
+    - ['local', 'replication', 'all', 'peer']
+    - ['host', 'replication', 'all', '127.0.0.1/32', 'md5']
+    - ['host', 'replication', 'all', '::1/128', 'md5']
+
+rabbitmq:
+  cluster:
+    rabbit@locahost:
+      user: rabbit       # user is confusing keyname; should be 'node: rabbit'
+      host: primaryhost  # host of node to join to
+      ram_node: None
+      runas: rabbitmq
+      erlang_cookie:
+        name: /var/lib/rabbitmq/.erlang.cookie
+        value: shared-value-for-all-cluster-members
+  vhost:
+    - airflow
+  user:
+    airflow:
+      - password: 'airflow'
+      - force: true
+      - tags:
+        - management
+        - administrator
+      - perms:
+          - 'airflow':
+            - '.*'
+            - '.*'
+            - '.*'
+      - runas: rabbitmq
+  queue:
+    airflow:
+      - user: airflow
+      - passwd: airflow
+      - durable: true
+      - auto_delete: false
+      - vhost: airflow
+      - arguments:
+          - 'x-message-ttl': 8640000
+          - 'x-expires': 8640000
+          - 'x-dead-letter-exchange': 'airflow'
+  binding:
+    airflow:
+      - destination_type: queue
+      - destination: airflow
+      - routing_key: airflow_routing_key
+      - user: airflow
+      - passwd: password
+      - vhost: airflow
+      - arguments:
+          - 'x-message-ttl': 8640000
+  exchange:
+    airflow:
+      - user: airflow
+      - passwd: airflow
+      - type: fanout
+      - durable: true
+      - internal: false
+      - auto_delete: false
+      - vhost: airflow
+      - arguments:
+          - 'alternate-**exchange': 'amq.fanout'
+          - 'test-header': 'testing'
+  policy: {}
+  upstream: {}
 ...
