--- a/airflow/osfingermap.yaml
+++ b/airflow/osfingermap.yaml
@@ -17,43 +17,38 @@ Amazon Linux-2:
 
 CentOS Linux-8:
   pkg:
-    deps:
-      # selinux-policy
-      - selinux-policy-minimum
-      - python3-dnf-plugin-versionlock
+    airflow:
+      deps:
+        # selinux-policy
+        - selinux-policy-minimum
+        - python3-dnf-plugin-versionlock
 
 CentOS Linux-7:
+  config:
+    airflow:
+      venv_cmd: virtualenv-3
   pkg:
-    deps:
-      - selinux-policy-minimum
-      - yum-plugin-versionlock
-      - krb5-devel        # for pykerberos pip
-      - openldap-devel    # for python-ldap pip
-      # python36-flask
-      # python36-future
-      # python36-gunicorn
-      # python36-packaging
-      # python36-tabulate
-      # python36-typing
-      # python36-werkzeug
-      # python36-jinja2
-      # python36-psutil
-      # python36-requests
-      # python36-argcomplete
-      # python36-attrs
-      # python36-cached_property
-      # python36-iso8601
-      # python36-jsonschema
-      # python36-markdown
-      # python36-pygments
-      # python36-setproctitle
-      # python36-sqlalchemy
-      # python36-tzlocal
-      # python36-cryptography
-      # python36-mysql
+    airflow:
+      # because centos7 defaults to python2, need to be explicit
+      uri_c: https://raw.githubusercontent.com/apache/airflow/constraints-VERSION/constraints-3.6.txt
+      deps:
+        - selinux-policy-minimum
+        - yum-plugin-versionlock
+        - krb5-devel        # for pykerberos pip
+        - openldap-devel    # for python-ldap pip
+        - python36-virtualenv
+        # python36-flask
+        # python36-werkzeug
+        # python36-jinja2
+        # python36-cached_property
+        # python36-markdown
+        # python36-pygments
+        # python36-sqlalchemy
+        # python36-mysql
 
 CentOS-6:
   pkg:
-    deps:
-      - selinux-policy-minimum
-      - yum-plugin-versionlock
+    airflow:
+      deps:
+        - selinux-policy-minimum
+        - yum-plugin-versionlock
