--- a/test/integration/postgres-rabbitmq/inspec.yml
+++ b/test/integration/postgres-rabbitmq/inspec.yml
@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 # vim: ft=yaml
 ---
-name: default
+name: postgres-rabbitmq
 title: airflow formula
 maintainer: SaltStack Formulas
 license: Apache-2.0
