--- a/airflow/osfingermap.yaml
+++ b/airflow/osfingermap.yaml
@@ -48,7 +48,7 @@ CentOS Linux-7:
         - gcc
         - selinux-policy-minimum
         - yum-plugin-versionlock
-        - krb5-devel        # for pykerberos pip
+        # krb5-devel        # for pykerberos pip
         - openldap-devel    # for python-ldap pip
         - python36-virtualenv
         - epel-release
@@ -59,7 +59,7 @@ CentOS Linux-7:
         - python3-pip
         - libcurl-devel
         # for funtionality
-        - mariadb-devel
+        # mariadb-devel
         - graphviz   # save dag structure as image
         - unixODBC-devel
         - cyrus-sasl-devel
