--- a/pillar.example
+++ b/pillar.example
@@ -90,6 +90,7 @@ airflow:
   pkg:
     airflow:
       version: 2.1.0
+      # no_pips_deps: true  # for salt.virtualenv.managed.no_deps flag
       extras:
         # yamllint disable rule:line-length
         # https://airflow.apache.org/docs/apache-airflow/stable/installation.html#extra-packages
@@ -100,8 +101,6 @@ airflow:
         - crypto
         - dask
         - datadog           # Datadog hooks and sensors
-        - devel
-        - devel_ci
         - jira              # Jira hooks and operators
         - sendgrid          # Send email using sendgrid
         - slack             # airflow.providers.slack.operators.slack.SlackAPIOperator
