--- a/pillar.example
+++ b/pillar.example
@@ -90,7 +90,8 @@ airflow:
   pkg:
     airflow:
       version: 2.1.0
-      # no_pips_deps: true  # for salt.virtualenv.managed.no_deps flag
+      # https://github.com/pypa/pip/issues/9187
+      no_pips_deps: true  # for salt.virtualenv.managed.no_deps flag
       extras:
         # yamllint disable rule:line-length
         # https://airflow.apache.org/docs/apache-airflow/stable/installation.html#extra-packages
