docs(readme): comment no_pip_deps var

--- a/pillar.example
+++ b/pillar.example
@@ -92,7 +92,7 @@ airflow:
       version: 2.1.0
       # https://github.com/pypa/pip/issues/9187
       # https://pip.pypa.io/en/latest/user_guide/#dependency-resolution-backtracking
-      no_pips_deps: true  # for salt.virtualenv.managed.no_deps flag
+      # no_pips_deps: true  # for salt.virtualenv.managed.no_deps flag
       extras:
         # yamllint disable rule:line-length
         # https://airflow.apache.org/docs/apache-airflow/stable/installation.html#extra-packages
