--- a/pillar.example
+++ b/pillar.example
@@ -63,6 +63,7 @@ airflow:
           # this is your database host
           sql_alchemy_conn: postgresql+psycopg2://airflow:airflow@127.0.0.1/airflow
           security: ''
+          sensitive_var_conn_names: 'treadstone,myfetish'
         operators:
           default_queue: airflow
         webserver:
