feat(impersonation): basic support for

--- a/airflow/defaults.yaml
+++ b/airflow/defaults.yaml
@@ -121,6 +121,7 @@ airflow:
         - airflow-webserver
         - airflow-celery-worker
       queues: []
+      impersonation: []
   pkg:
     airflow:
       version: 2.1.0
