fix(selinux): add file contexts for home and systemd

--- a/airflow/defaults.yaml
+++ b/airflow/defaults.yaml
@@ -6,7 +6,7 @@ airflow:
     airflow:
       lib: /var/lib/airflow
       tmp: /tmp/airflow
-      service: /lib/systemd/system
+      service: /usr/lib/systemd/system
       environ: /etc/sysconfig
       base: /home   # os sensitive user homedir
       userhome: null    # AIRFLOW_HOME is set by pillar data, otherwise map.jinja
@@ -242,19 +242,19 @@ airflow:
     clean: false
   linux:
     altpriority: 0   # zero disables alternatives
+    selinux: true
   retry_option:
     # https://docs.saltstack.com/en/latest/ref/states/requisites.html#retrying-states
     attempts: 3
     until: true
     interval: 60
     splay: 10
-  div: '/'
 
   # Just here for testing
   added_in_defaults: defaults_value
   winner: defaults
 
-  # Just here as experiemnt/documentation
+  # Just here as experiment/documentation
   supported:
     - airflow
   wanted:
